analysis/src/snapshots/analysis__res__tests__res_def.snap
---
source: analysis/src/res.rs
expression: "test_helper(\"x = 1\")"
---
Root {
    items: [
        Def {
            pat: Ident(
                UniqueId(2),
            ) @ 0..1,
            expr: Lit(
                Num(
                    Ratio {
                        numer: 1,
                        denom: 1,
                    },
                ) @ 4..5,
            ) @ 4..5,
        } @ 0..5,
    ],
} @ 0..5
