analysis/src/snapshots/analysis__res__tests__res_let.snap
---
source: analysis/src/res.rs
expression: "test_helper(\"let x = 1 in x\")"
---
Root {
    items: [
        Expr(
            Let {
                pat: Ident(
                    UniqueId(1),
                ) @ 4..5,
                expr: Lit(
                    Num(
                        Ratio {
                            numer: 1,
                            denom: 1,
                        },
                    ) @ 8..9,
                ) @ 8..9,
                body: Ident(
                    UniqueId(1) @ 13..14,
                ) @ 13..14,
            },
        ) @ 0..14,
    ],
} @ 0..14
